syntax = "proto3";

package kafka.v1;

option go_package = "connection/internal/platform/kafka/pb;kafkapb";

// KafkaEvent matches connection/internal/platform/kafka/event.go.
message KafkaEvent {
  uint64 id = 1 [json_name = "ID"];
  uint32 user_id = 2 [json_name = "UserID"];
  uint32 room_id = 3 [json_name = "RoomID"];
  string msg_type = 4 [json_name = "MsgType"];
  bytes content = 5 [json_name = "Content"];
  string temp_id = 6 [json_name = "TempID"];
  int64 create_at = 7 [json_name = "CreateAt"];
}
